Source/WebCore/platform/audio/PlatformMediaSessionManager.cpp
@@ -29,6 +29,7 @@
 #if ENABLE(VIDEO)
 
 #include "AudioSession.h"
+#include "Document.h"
 #include "Logging.h"
 #include "NotImplemented.h"
 #include "PlatformMediaSession.h"
@@ -327,6 +328,22 @@ void PlatformMediaSessionManager::systemDidWake()
 void PlatformMediaSessionManager::audioOutputDeviceChanged()
 {
     updateSessionState();
+}
+
+void PlatformMediaSessionManager::stopAllMediaPlaybackForDocument(const Document* document)
+{
+    Vector<PlatformMediaSession*> sessions = m_sessions;
+    for (auto* session : sessions) {
+        if (session->client().hostingDocument() == document)
+            session->pauseSession();
+    }
+}
+
+void PlatformMediaSessionManager::stopAllMediaPlaybackForProcess()
+{
+    Vector<PlatformMediaSession*> sessions = m_sessions;
+    for (auto* session : sessions)
+        session->pauseSession();
 }
 
 }
