Source/WebCore/platform/audio/PlatformMediaSessionManager.h
@@ -36,6 +36,7 @@
 
 namespace WebCore {
 
+class Document;
 class HTMLMediaElement;
 class PlatformMediaSession;
 class RemoteCommandListener;
@@ -55,6 +56,8 @@ public:
 
     WEBCORE_EXPORT void applicationWillEnterForeground() const;
     WEBCORE_EXPORT void applicationWillEnterBackground() const;
+
+    void stopAllMediaPlaybackForDocument(const Document&);
 
     enum SessionRestrictionFlags {
         NoRestrictions = 0,
